# todo-app

./: README.md
backend/: .env  Cargo.toml
backend/migrations/: 20251104213718_create_todos_table.sql
backend/src/: api_key_middleware.rs  errors.rs  main.rs  models.rs  routes.rs
frontend/: .cta.json  package.json  pnpm-lock.yaml
frontend/src/: routeTree.gen.ts  router.tsx
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/routes/todos/: index.tsx
