[package]
name = "todo-app-beonly"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = {version = "1.48.0", features = ["full"]}
serde = { version = "1.0.228", features = ["derive"] }

tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing-subscriber = "0.3"

sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
dotenvy = "0.15"
